modify _java-backend juc -Eddie